<resources>
    <string name="app_name">Rent A Book</string>
    <string name="rent_a_book">Rent A Book</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="user_image">User Image</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="new_user">New User?</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="submit">Submit</string>
    <string name="todo">TODO</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Paste BOTH strings as required -->
    <string name="name">Name</string>
    <string name="loading">Loading</string>
    <string name="username">Username</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>