<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation"
    android:id="@+id/sel_pass_bg"
    tools:context=".select_pass">



    <LinearLayout
        android:id="@+id/center_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal" />

    <ImageView
        android:id="@+id/eye_pass1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_remove_red_eye_24"
        android:padding="10dp"
        android:elevation="5dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/pass1"
        app:layout_constraintEnd_toEndOf="@+id/pass1"
        app:layout_constraintTop_toTopOf="@id/pass1"
        android:contentDescription="@string/todo"
        android:clickable="true"
        android:focusable="true" />

    <EditText
        android:id="@+id/pass1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:paddingHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:paddingVertical="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/center_line"
        app:layout_constraintTop_toBottomOf="@+id/center_line"
        android:autofillHints="" />


    <ImageView
        android:id="@+id/eye_pass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_remove_red_eye_24"
        android:padding="10dp"
        android:layout_marginEnd="15dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/pass2"
        app:layout_constraintEnd_toEndOf="@+id/pass2"
        app:layout_constraintTop_toTopOf="@id/pass2"
        android:contentDescription="@string/todo"
        android:clickable="true"
        android:focusable="true" />

    <EditText
        android:id="@+id/pass2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:background="@drawable/edittext_background"
        android:inputType="textPassword"
        android:paddingHorizontal="30dp"
        android:hint="@string/confirm_password"
        android:layout_marginTop="20dp"
        android:paddingVertical="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/center_line"
        app:layout_constraintTop_toBottomOf="@+id/pass1"
        android:autofillHints="" />

    <Button
        android:id="@+id/confirm_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/btn_orange"
        android:hint="@string/submit"
        android:textAllCaps="false"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="visible"
        app:layout_goneMarginBottom="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>