<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation"
    android:id="@+id/Login_page_bg"
    tools:context=".LoginPage">

    <TextView
        android:id="@+id/Login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="LOGIN"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="80dp"
        android:src="@drawable/login_signup_"
        app:layout_constraintBottom_toTopOf="@+id/Usr_nm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_text"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/Usr_nm"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_background"
        android:hint="Username"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="30dp"
        android:paddingVertical="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@id/Usr_pass"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <EditText
        android:id="@+id/Usr_pass"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_background"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingHorizontal="30dp"
        android:paddingVertical="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@id/forget_pass"
        app:layout_constraintEnd_toEndOf="@+id/Usr_nm"
        app:layout_constraintStart_toStartOf="@+id/Usr_nm" />

    <ImageView
        android:id="@+id/eye_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/todo"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_remove_red_eye_24"
        app:layout_constraintBottom_toBottomOf="@+id/Usr_pass"
        app:layout_constraintEnd_toEndOf="@id/Usr_pass"
        app:layout_constraintTop_toTopOf="@+id/Usr_pass" />

    <TextView
        android:id="@+id/forget_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="Forgot Your Password?"
        app:layout_constraintBottom_toTopOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="@+id/Usr_pass"
        app:layout_constraintStart_toStartOf="@+id/Usr_pass" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/btn_orange"
        android:hint="@string/login"
        android:textAllCaps="false"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/forget_pass"
        app:layout_constraintStart_toStartOf="@+id/forget_pass" />


    <TextView
        android:id="@+id/newU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingEnd="1dp"
        android:text="@string/new_user"
        app:layout_constraintBottom_toBottomOf="@+id/CrAc"
        app:layout_constraintStart_toStartOf="@+id/forget_pass"
        app:layout_constraintEnd_toStartOf="@id/CrAc"/>

    <TextView
        android:id="@+id/CrAc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="1dp"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/forget_pass"
        app:layout_constraintStart_toEndOf="@id/newU"/>


</androidx.constraintlayout.widget.ConstraintLayout>